updated html file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="firstnav">
                 <a href="#" class="flex gap-2 items-center"> <img src="assests/logo.jpg" alt=""
                         class="w-[30px] md:w-[40px] rounded-full">
-                    <span>Bizfunnell</span></a>
+                    <span>Bizfunnel</span></a>
             </div>
             <div id="secondnav" class=" hidden md:flex gap-[3vw]">
                 <a href="/"
