--- a/pricing.html
+++ b/pricing.html
@@ -5,9 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" type="image/x-icon" href="assests/logo.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 
     <style>
@@ -22,14 +24,61 @@
     </style>
 </head>
 
-<body class="main2 text-white mb-20">
+<body class="main2 text-white">
+
+    <div id="nav"
+        class="mt-3 md:mt-0 text-base md:text-2xl flex justify-between px-[2vw] py-[1.2vw] backdrop-filter backdrop-blur-sm bg-opacity-10 sticky top-0 bg-[#101110] z-[999] items-center">
+        <div id="firstnav">
+            <a href="index.html" class="flex gap-2 items-center"> <img src="assests/logo.jpg" alt=""
+                    class="w-[30px] md:w-[40px] rounded-full">
+                <span>Bizfunnel</span></a>
+        </div>
+        <div id="secondnav" class=" hidden md:flex gap-[3vw]">
+            <a href="index.html"
+                class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Home</a>
+
+            <a href="#morefeatures"
+                class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Features</a>
+            <a href="#twohands"
+                class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Templates</a>
+            <a href="pricing.html" target="_blank"
+                class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Pricing</a>
+        </div>
+        <div id="thirdnav" class="text-xs md:text-base flex gap-[2vw] items-center">
+            <button
+                class="hidden md:block px-[7px] md:px-[1vw]  py-[5px] md:py-[0.5vw] bg-[#2C2A2C] border-[1px] border-gray-500 hover:border-[#FEFEFF] rounded-md duration-100">Log
+                In</button>
+            <a href="#_"
+                class="relative inline-flex items-center justify-center px-2 py-1 md:px-6 md:py-3 md:font-medium tracking-tighter text-[#FEFEFF] bg-gray-800 rounded-md group">
+                <span
+                    class="absolute inset-0 w-full h-full mt-1 ml-1 transition-all duration-300 ease-in-out bg-green-600 rounded-md group-hover:mt-0 group-hover:ml-0"></span>
+                <span class="absolute inset-0 w-full h-full bg-[#FEFEFF] rounded-md "></span>
+                <span
+                    class="absolute inset-0 w-full h-full transition-all duration-200 ease-in-out delay-100 bg-green-600 rounded-md opacity-0 group-hover:opacity-100 "></span>
+                <span
+                    class="relative text-green-600 transition-colors duration-200 ease-in-out delay-100 group-hover:text-[#FEFEFF]">Buy
+                    Now</span>
+            </a>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn md:hidden mx-[15px]">
+                <i class="ri-align-justify text-2xl"></i>
+            </label>
+        </div>
+    </div>
 
 
+    <div id="nav2" class="hidden flex gap-[3vw] h-fit flex-col items-center ">
+        <a href="/" class="border border-dashed px-4 py-1 rounded">Home</a>
+
+        <a href="#morefeatures" class="border border-dashed px-4 py-1 rounded">Features</a>
+        <a href="#twohands" class="border border-dashed px-4 py-1 rounded">Templates</a>
+        <a href="pricing.html" target="_blank" class="border border-dashed px-4 py-1 rounded">Pricing</a>
+    </div>
 
     <h1 class="text-center font-bold text-5xl mt-[4vw] relative text-green-600">Our Pricing</h1>
 
     <div class="flex flex-row justify-center  text-sm tracking-tight font-medium  my-[2vw]">
-        <p class="mx-3 translate-y-1">Annually</p>
+        <p class="mx-3 translate-y-1">Monthly</p>
 
         <!-- Toggle Button -->
         <label for="toggle" class="flex items-center cursor-pointer">
@@ -45,17 +94,17 @@
             </div>
         </label>
 
-        <p class="mx-3 translate-y-1">Monthly</p>
+        <p class="mx-3 translate-y-1">Annually</p>
     </div>
 
-    <div class="flex flex-col md:flex-row md:transform md:scale-75 lg:scale-100 justify-center gap-5">
+    <div class="flex flex-col md:flex-row md:transform md:scale-75 lg:scale-100 justify-center gap-5 mb-20">
         <div
             class="border-transparent rounded-lg text-center p-5 mx-auto md:mx-0 my-2 bg-gradient bg-white font-medium z-10  w-[300px]  md:w-[350px] backdrop-filter backdrop-blur-sm bg-opacity-10  border-white border h-fit">
             <div class="py-4 flex flex-col">
                 <div class="text-black bg-white rounded p-2">
-                    <p class="text-5xl">Basic</p>
-                    <div id="month" class="font-bold text-4xl month hidden text-green-700">₹1,499/-</div>
-                    <div id="annual" class="font-bold text-4xl annual text-green-700">₹14,999/-</div>
+                    <p class="text-4xl font-bold">Basic</p>
+                    <div id="month" class="font-bold text-4xl month  text-green-700">₹1,499/-</div>
+                    <div id="annual" class="font-bold text-4xl annual hidden text-green-700">₹14,999/-</div>
                 </div>
 
                 <p class="mt-2">
@@ -93,9 +142,9 @@
                         Plan 😍</p>
                 </div>
                 <div class="text-black bg-white rounded-b p-2">
-                    <p class="text-5xl">Advanced</p>
-                    <div id="month" class="font-bold text-4xl month hidden text-green-700">₹1,999/-</div>
-                    <div id="annual" class="font-bold text-4xl annual text-green-700">₹19,999/-</div>
+                    <p class="text-4xl font-bold">Advanced</p>
+                    <div id="month" class="font-bold text-4xl month  text-green-700">₹1,999/-</div>
+                    <div id="annual" class="font-bold text-4xl annual hidden text-green-700">₹19,999/-</div>
                 </div>
 
                 <p class="mt-2">
@@ -130,9 +179,9 @@
             class="border-transparent rounded-lg text-center p-5 mx-auto md:mx-0 my-2 bg-gradient bg-white font-medium z-10 w-[300px]  md:w-[350px] backdrop-filter backdrop-blur-sm bg-opacity-10  border-white border h-fit">
             <div class="py-4 flex flex-col">
                 <div class="text-black bg-white rounded p-2">
-                    <p class="text-5xl">Expert</p>
-                    <div id="month" class="font-bold text-4xl month hidden text-green-700">₹2,499/-</div>
-                    <div id="annual" class="font-bold text-4xl annual text-green-700">₹24,999/-</div>
+                    <p class="text-4xl font-bold">Expert</p>
+                    <div id="month" class="font-bold text-4xl month  text-green-700">₹2,499/-</div>
+                    <div id="annual" class="font-bold text-4xl annual hidden text-green-700">₹24,999/-</div>
                 </div>
 
                 <p class="mt-2">
@@ -164,6 +213,98 @@
         </div>
     </div>
 
+
+    <footer class="p-4 bg-white sm:p-6 dark:bg-gray-800">
+        <div class="mx-auto max-w-screen-xl">
+            <div class="md:flex md:justify-between">
+                <div class="mb-6 md:mb-0">
+                    <a href="https://flowbite.com" class="flex items-center">
+                        <img src="https://flowbite.com/docs/images/logo.svg" class="mr-3 h-8" alt="FlowBite Logo" />
+                        <span
+                            class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+                    </a>
+                </div>
+                <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
+                    <div>
+                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Resources</h2>
+                        <ul class="text-gray-600 dark:text-gray-400">
+                            <li class="mb-4">
+                                <a href="https://flowbite.com" class="hover:underline">Flowbite</a>
+                            </li>
+                            <li>
+                                <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Follow us</h2>
+                        <ul class="text-gray-600 dark:text-gray-400">
+                            <li class="mb-4">
+                                <a href="https://github.com/themesberg/flowbite" class="hover:underline ">Github</a>
+                            </li>
+                            <li>
+                                <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Discord</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
+                        <ul class="text-gray-600 dark:text-gray-400">
+                            <li class="mb-4">
+                                <a href="#" class="hover:underline">Privacy Policy</a>
+                            </li>
+                            <li>
+                                <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+            <div class="sm:flex sm:items-center sm:justify-between">
+                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2022 <a
+                        href="https://flowbite.com" class="hover:underline">Flowbite™</a>. All Rights Reserved.
+                </span>
+                <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
+                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path
+                                d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
+                        </svg>
+                    </a>
+                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                    <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10c5.51 0 10-4.48 10-10S17.51 2 12 2zm6.605 4.61a8.502 8.502 0 011.93 5.314c-.281-.054-3.101-.629-5.943-.271-.065-.141-.12-.293-.184-.445a25.416 25.416 0 00-.564-1.236c3.145-1.28 4.577-3.124 4.761-3.362zM12 3.475c2.17 0 4.154.813 5.662 2.148-.152.216-1.443 1.941-4.48 3.08-1.399-2.57-2.95-4.675-3.189-5A8.687 8.687 0 0112 3.475zm-3.633.803a53.896 53.896 0 013.167 4.935c-3.992 1.063-7.517 1.04-7.896 1.04a8.581 8.581 0 014.729-5.975zM3.453 12.01v-.26c.37.01 4.512.065 8.775-1.215.25.477.477.965.694 1.453-.109.033-.228.065-.336.098-4.404 1.42-6.747 5.303-6.942 5.629a8.522 8.522 0 01-2.19-5.705zM12 20.547a8.482 8.482 0 01-5.239-1.8c.152-.315 1.888-3.656 6.703-5.337.022-.01.033-.01.054-.022a35.318 35.318 0 011.823 6.475 8.4 8.4 0 01-3.341.684zm4.761-1.465c-.086-.52-.542-3.015-1.659-6.084 2.679-.423 5.022.271 5.314.369a8.468 8.468 0 01-3.655 5.715z"
+                                clip-rule="evenodd" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!--JS for toggle-->
     <script>
         function myFunction() {
@@ -171,11 +312,11 @@
             var y = document.querySelectorAll('.month');
             for (var i = 0; i < x.length; i++) {
                 if (document.getElementById("toggle").checked == true) {
-                    x[i].classList.add('hidden');
-                    y[i].classList.remove('hidden');
-                } else {
-                    x[i].classList.remove('hidden');
                     y[i].classList.add('hidden');
+                    x[i].classList.remove('hidden');
+                } else {
+                    y[i].classList.remove('hidden');
+                    x[i].classList.add('hidden');
                 }
             }
         }
