updated html file

--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                     <div class="flex md:flex-row flex-col justify-center items-center gap-10">
                         <img src="https://iili.io/JRJWDqG.png" alt="" class="">
                         <img src="https://iili.io/JRJXkpS.png" alt="">
-                        <p class="text-white md:text-lg">4.8 out of 5 (review rating) Over 1,200+ reviews</p>
+                        <p class="text-white md:text-lg mb-[20px]">4.8 out of 5 (review rating) Over 1,200+ reviews</p>
                     </div>
 
 
@@ -1059,7 +1059,8 @@
                         <!-- Shipping Section -->
                         <div>
                             <div class="flex justify-between items-center cursor-pointer">
-                                <h3 class="font-semibold text-xl  text-white leading-5 ">Shipping</h3>
+                                <h3 class="font-semibold md:text-xl  text-white leading-5 ">How long does it take to build
+                                    an online membership?</h3>
                                 <button aria-label="too"
                                     class=" text-white cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800"
                                     onclick="openAnsSection(1)">
@@ -1072,10 +1073,11 @@
                                     </svg>
                                 </button>
                             </div>
-                            <p id="para1" class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
-                                We are covering every major country worldwide. The shipment leaves from US as it is our
-                                headquarter. Some extra information you probably need to add here so that the customer
-                                is clear of their wanted expectations.</p>
+                            <p id="para1" class="hidden font-normal text-gray-400 text-sm md:text-base leading-6  mt-4 w-11/12">
+                                With pre-designed ClickFunnels templates, you can get your membership site up and
+                                running in as little as a few minutes. Since ClickFunnels is an all-in-one system,
+                                there’s no need for any 3rd party programs while you build, promote, and sell your
+                                membership site, making setup a breeze.</p>
                         </div>
 
                         <hr class="my-7 bg-gray-200" />
@@ -1084,7 +1086,8 @@
 
                         <div>
                             <div class="flex justify-between items-center cursor-pointer">
-                                <h3 class="font-semibold text-xl text-white  leading-5 ">Returns</h3>
+                                <h3 class="font-semibold md:text-xl text-white  leading-5 ">Do I need a lot of technical
+                                    experience to build membership sites inside ClickFunnels?</h3>
                                 <button aria-label="too"
                                     class=" text-white cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800"
                                     onclick="openAnsSection(2)">
@@ -1097,10 +1100,14 @@
                                     </svg>
                                 </button>
                             </div>
-                            <p id="para2" class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
-                                We are covering every major country worldwide. The shipment leaves from US as it is our
-                                headquarter. Some extra information you probably need to add here so that the customer
-                                is clear of their wanted expectations.</p>
+                            <p id="para2" class="hidden font-normal text-gray-400 text-sm md:text-base leading-6  mt-4 w-11/12">
+                                No! Everything about ClickFunnels is designed to be simple! The ClickFunnels Page Editor
+                                is “drag and drop” easy. You don’t need to be a tech-wizard, or coder in order to build
+                                a membership site. And you don’t have to HIRE a tech team in order to build out your
+                                members-only material.
+
+                                We also have training demos and tutorials on our Help Desk to guide you through each
+                                step. Or you can reach out to our 24/7 Support Team.</p>
                         </div>
 
                         <hr class="my-7 bg-gray-200" />
@@ -1109,7 +1116,8 @@
 
                         <div>
                             <div class="flex justify-between items-center cursor-pointer">
-                                <h3 class="font-semibold text-xl text-white  leading-5 ">Exchange</h3>
+                                <h3 class="font-semibold md:text-xl text-white  leading-5 ">Does ClickFunnels provide
+                                    templates for membership sites?</h3>
                                 <button aria-label="too"
                                     class=" text-white cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800"
                                     onclick="openAnsSection(3)">
@@ -1122,10 +1130,9 @@
                                     </svg>
                                 </button>
                             </div>
-                            <p id="para3" class="hidden font-normal text-gray-400 text-base leading-6 mt-4 w-11/12">
-                                We are covering every major country worldwide. The shipment leaves from US as it is our
-                                headquarter. Some extra information you probably need to add here so that the customer
-                                is clear of their wanted expectations.</p>
+                            <p id="para3" class="hidden font-normal text-gray-400 text-sm md:text-base leading-6 mt-4 w-11/12">
+                                Yes! ClickFunnels provides a variety of membership site templates for those who aren’t
+                                designers, while still being flexible enough to start from scratch if you’d like.</p>
                         </div>
 
                         <hr class="my-7 bg-gray-200" />
@@ -1134,7 +1141,8 @@
 
                         <div>
                             <div class="flex justify-between items-center cursor-pointer">
-                                <h3 class="font-semibold text-xl text-white  leading-5 ">Tracking</h3>
+                                <h3 class="font-semibold md:text-xl text-white  leading-5 ">Does ClickFunnels take a
+                                    percentage of membership site sales?</h3>
                                 <button aria-label="too"
                                     class="text-white cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800"
                                     onclick="openAnsSection(4)">
@@ -1147,10 +1155,12 @@
                                     </svg>
                                 </button>
                             </div>
-                            <p id="para4" class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
-                                We are covering every major country worldwide. The shipment leaves from US as it is our
-                                headquarter. Some extra information you probably need to add here so that the customer
-                                is clear of their wanted expectations.</p>
+                            <p id="para4" class="hidden font-normal text-gray-400 text-sm md:text-base leading-6  mt-4 w-11/12">
+                                No, users keep every penny they make selling memberships using the ClickFunnels
+                                platform.</p>
+                        </div>
+                        <div>
+                          
                         </div>
 
                         <hr class="my-7 bg-gray-200" />
