--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
                             <a href="/" class="flex items-center">
                                 <img src="assests/logo.jpg" class="mr-3 h-8 rounded-full" alt="bizfunnel Logo" />
                                 <span
-                                    class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+                                    class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Bizfunnel</span>
                             </a>
                         </div>
                         <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
