--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 
         <div id="nav"
-            class="mt-3 md:mt-0 text-base md:text-2xl  z-[999] px-[2vw] py-[1.2vw] overflow-hidden sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-10  bg-[#101110] ">
+            class=" text-base md:text-2xl  z-[999] px-[2vw] py-[1.2vw] overflow-hidden sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-10  bg-[#101110] ">
 
             <div id="alert-border-3"
                 class="w-[100vw]  flex items-center p-4 mb-4  border-t-4 text-green-400 bg-gray-800 border-green-800 -mx-[2vw] -my-[1.2vw] "
@@ -151,7 +151,7 @@
                 </button>
             </div>
 
-            <div class="flex justify-between  items-center">
+            <div class="flex justify-between  items-center mt-3 md:mt-0">
                 <div id="firstnav ">
                     <a href="#" class="flex gap-2 items-center"> <img src="assests/logo.jpg" alt=""
                             class="w-[30px] md:w-[40px] rounded-full">
@@ -1054,7 +1054,10 @@
 
                 </div>
                 <div class="flex md:flex-row flex-col md:space-x-8 md:mt-16 mt-8">
-
+                    <div class="md:w-5/12 lg:w-4/12 w-full">
+                        <img src="https://i.ibb.co/8bCs73h/pexels-ron-lach-8128069-1.png" alt="Image of Glass bottle" class="w-full md:block hidden" />
+                        <img src="https://i.ibb.co/gZMfQJq/pexels-ron-lach-8128069-1-1.png" alt="Image of Glass bottle" class="w-full md:hidden block" />
+                    </div>
                     <div class="md:w-7/12 lg:w-8/12 w-full md:mt-0 sm:mt-14 mt-10">
                         <!-- Shipping Section -->
                         <div>
