--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <!-- Main modal -->
 
         <div id="default-modal" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-[999] justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-            <div class="relative p-4 w-full max-w-2xl max-h-full">
+            class="hidden overflow-y-auto overflow-x-hidden fixed right-0  z-[999] justify-center items-end  h-screen w-[60%]">
+            <div class="relative w-full">
                 <!-- Modal content -->
-                <div class="relative  bg-[#1F2937] rounded-lg shadow">
+                <div class="relative  bg-[#1F2937]  shadow h-screen z-[999] w-full">
                     <!-- Modal header -->
                     <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
                         <h3 class="text-xl font-semibold  text-white">
@@ -59,7 +59,7 @@
 
 
         <div id="nav"
-            class=" text-base md:text-2xl  z-[999] px-[2vw] py-[1.2vw] overflow-hidden sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-10  bg-[#101110] ">
+            class=" text-base md:text-2xl  z-[998] px-[2vw] py-[1.2vw] overflow-hidden sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-10  bg-[#101110] ">
 
             <div id="alert-border-3"
                 class="w-[100vw]  flex items-center p-4 mb-4  border-t-4 text-green-400 bg-gray-800 border-green-800 -mx-[2vw] -my-[1.2vw] "
