--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
                         <div class="flex text-xs md:text-2xl" id="maindiv">
                             <ul class="z-[49]" id="ulOne">
                                 <li
-                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl md:-translate-y-36 md:-translate-x-14 z-[49]">
+                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl -translate-y-7 md:-translate-y-36 md:-translate-x-14 z-[49]">
                                     <i class="ri-circle-fill"></i> Real-Estate
                                 </li>
                                 <li
-                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl translate-y-7 md:translate-y-0 translate-x-8 md:translate-x-10">
+                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl translate-y-4 md:translate-y-0 translate-x-8 md:translate-x-10">
                                     <i class="ri-circle-fill" style="z-index: 1;"></i> Course</li>
 
                                 <li
